--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rahul-5503.github.io/shop-sample",
+  "homepage": "https://rahul-5503.github.io/shop-sample/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
